# Edusmart_ChatbotRAG

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
app/: config.py  ingest.py  main.py
app/controllers/: chat_controller.py
app/index_store/: chunks.json
app/services/: bm25_retriever.py  document_service.py  faiss_service.py  fusion.py  hybrid_retriever.py  interfaces.py  llm_service.py  rerank.py
app/static/: index.html
docs/: exemple_photosynthese.txt
eval/: dataset.jsonl  eval_report.md  evaluate.py  metrics.py  report.py  results.json
eval/corpus/: cycle_eau.txt  fonctions_affines.txt  fractions.txt  photosynthese.txt  pythagore.txt  respiration_cellulaire.txt  revolution_francaise.txt  seconde_guerre_mondiale.txt
tests/: conftest.py  test_api.py  test_bm25_retriever.py  test_document_service.py  test_eval_metrics.py  test_faiss_service.py  test_fusion.py  test_hybrid_retriever.py  test_interfaces.py
